# CS521-mp1

./: CMakeCache.txt
build-ablation/: CMakeCache.txt  Makefile
build-o4/: mp1_cpu
cpu/: gemm_cpu.cpp
include/: utils.h
mp1/: CMakeLists.txt
mp1/build-ablation/: cmake_install.cmake  mp1_cpu
mp1/build-o4/: CMakeCache.txt  Makefile  cmake_install.cmake
mp1/gpu/: gemm_gpu.cu
mp1/scripts/: ablation.py
scripts/: scaling_o4.py
